# PromptStudio

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_CONFIRMED.md  PHASE_5_SECURITY_ENTERPRISE.md  README.md  README_AR.md  STAGE3_COMPLETED.md  STAGE4_COMPLETED.md  TYPESCRIPT_FIXES.md  USAGE_GUIDE_AR.md  backend-tsconfig.json  docker-compose.dev.yml  errors_summary.txt  fix_import_paths.py  fix_typescript_errors.py  package-lock.json  package.json  start.bat  start.sh  tailwind.config.js  tsconfig.app.json  tsconfig.json  type-check-results2.txt  verify-stage3.mjs  verify-stage4.mjs  verify-system.mjs  vitest.config.ts
.agent/rules/: behavior.md
.claude/: settings.local.json
.github/workflows/: quality-assurance.yml
docs/: API_DOCUMENTATION.md
prisma/: init.sql  prisma.config.ts  schema.prisma
prisma/migrations/: 004_stage4_agent_orchestration.sql
services/dspy_service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/dspy_service/app/: __init__.py  dspy_runner.py  main.py  schemas.py
services/dspy_worker/: Dockerfile  README.md  requirements.txt
shared/types/: cache.ts  collaboration.ts
src/: App.tsx  react-app-env.d.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/backend/: index.ts
src/components/: ComparisonView.tsx  CulturalContextPanel.tsx  ExportPanel.tsx  LanguageSelector.tsx  LanguageSwitcher.tsx  ProviderSelector.tsx  SavedTranslations.tsx  TranslationResult.tsx
src/hooks/: useOptimizationRun.ts
(+211 files in other folders)
